--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<link href="style.css" rel="stylesheet">
-		<title>Your name resume</title>
+		<title>Deepak resume</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	</head>
 
@@ -10,7 +10,7 @@
 			<!-- resume header with your name and title -->
 			<h1>Deepak Kushwaha</h1>
 			<hr>
-			MERN Stack Developer
+			Software Engineering
 			<hr>
 		</header>
 		<main>
@@ -34,7 +34,7 @@
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills -->
-                    <p>HTML, CSS, GitHub, ,Javascrpit,Reactjs,Redux,Nodejs,Express,Mongodb</p>
+                    <p>HTML, CSS, GitHub, Javascrpit, Reactjs, Redux, Nodejs, Express, Mongodb</p>
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
